--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -4,10 +4,10 @@ author: "robertwcw"
 date: "9/21/2020"
 output: 
   html_document: 
-    fig_caption: yes
     keep_md: yes
     fig_width: 13
     fig_height: 9
+    toc_depth: 4
 ---
 ## SYNOPSIS
 
@@ -25,29 +25,32 @@ source(getRflib("is.defined.R"),local = TRUE)
 source(getRflib("strCap.R"),local = TRUE)
 # source(getRflib("myplclust.R"),local = TRUE)
 
-if (!requireNamespace("data.table", quietly = TRUE)) {
-        install.packages("data.table")
-}
+if (!requireNamespace("data.table",quietly = TRUE)) install.packages("data.table")
 library(data.table)
-if (!requireNamespace("dplyr", quietly = TRUE)) {
-        install.packages("dplyr")
-}
+
+if (!requireNamespace("dplyr",quietly = TRUE)) install.packages("dplyr")
 library(dplyr, warn.conflicts = FALSE)
+
+if (!requireNamespace("lubridate",quietly = TRUE)) install.packages("lubridate")
+library(lubridate, quietly = TRUE, warn.conflicts = FALSE)
+
+if (!requireNamespace("maps",quietly = TRUE)) install.packages("maps")
 library(maps)
-# library(xts)
+
+if (!requireNamespace("lattice", quietly  = TRUE)) install.packages("lattice")
+library(lattice)
 
 # 'udf.num2gcs' user-defined function to convert LATITUDE & LONGITUDE coordinate values in integer type to nnn.dddd geographic coordinate system format 
 udf.num2gcs <- function(X, y) { # y is number of significant digits.
-        if (!is.na(X) & !is.null(X) & is.numeric(X)) {
-                x <- as.character(X)
-                l <- nchar(x)
-                ifelse(l < 3, return(as.numeric(x)),
-                       ifelse(l == 3, y <- 1,
-                              ifelse(l == 4, y <- 2,
-                                     ifelse(l > 4, y <- y, y <- 0))))
-                y <- l - y
-                X <- as.numeric(paste0(x,"e",-y))
-        }
+        if (is.na(X) | is.null(X) | !is.numeric(X)) return(X)
+        x <- as.character(X)
+        l <- nchar(x)
+        ifelse(l < 3, y <- l,
+               ifelse(l == 3, y <- 1,
+                      ifelse(l == 4, y <- 2,
+                             ifelse(l > 4, y <- y, y <- 0))))
+        y <- l - y
+        X <- as.numeric(paste0(x,"e",-y))
         X
 }
 
@@ -97,7 +100,7 @@ udf.expont <- function(x, y) {
         as.numeric(paste0(as.character(y),x))
 }
 
-# all states of the USA (exclude off-shore affiliated territories).
+# list of states of the USA (exclude off-shore affiliated territories).
 mystates <- c(unique(state.fips$abb), "AK", "HI") 
 
 # set up colour palette.
@@ -117,6 +120,8 @@ Loading *raw* comma-delimited text file data set downloaded from course website 
 
 ```{r data.load, cache=TRUE, tidy=TRUE}
 # loading data downloaded from course website into R workspace 
+#   user  system elapsed 
+# 53.457   1.190  57.097 
 
 # set data source url to course website
 fileurl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
@@ -147,24 +152,6 @@ close(filesrc)
 
 filenam <- filenam[which(!is.na(filenam))]
 
-# # save an archive copy of StormData data.table to local `r datadir`
-# for (i in 1:length(filenam)) {
-#         fileout <- paste(datadir, filenam[i], sep = "/")
-#         fileout <- paste(fileout, "csv", "bz2", sep = ".")
-#         filesrc <- bzfile(fileout, open = "w")
-#         write.csv(get(filenam[i]), filesrc, row.names = FALSE)
-#         flush(filesrc)
-# }
-# close(filesrc)
-# rm(fileout)
-# 
-# read StormData from saved archive copy data file on local disk
-# filesrc <- paste(datadir, "StormData.csv.bz2", sep = "/")
-# filesrc <- bzfile(filesrc, open = "r") # establish a connection to local file
-# StormData <- data.table(read.csv(filesrc, skip = 0))
-# flush(filesrc)
-# close(filesrc)
-
 unlink(filetmp)
 rm(fileurl,filetmp,filesrc,filels,filein)
 ```
@@ -186,8 +173,10 @@ str(get(filenam[1]))
 There are **`r length(names(get(filenam[1])))`** columns found in the *raw* data set **`r filenam[1]`**. 
 
 ```{r data.proc, cache=TRUE, tidy=TRUE}
+# preprocessing data, perform required transformation for downstream analytic
 #    user  system elapsed 
-# 182.282 105.120 287.894
+# 333.129  92.214 422.774
+
 d1 <- sub(" .*", "", StormData$BGN_DATE)
 d2 <- gsub("[oO]", "0", StormData$BGN_TIME) # rectify typo error of 'O' for '0'
 d2 <- sub("12:00:00 AM", "00:00:00", d2) # rectify non-POSIXt compliant time fmt
@@ -206,7 +195,7 @@ rm(d1, d2)
 # reformat LATITUDE vector to geographic coordinate system format nnn.ddd
   numsign <- sign(StormData$LATITUDE)
   lat <- sapply(StormData$LATITUDE, udf.stripsign)
-  lat <- sapply(lat, udf.num2gcs, 2) # param '2' is number of significant digits
+  lat <- sapply(lat, udf.num2gcs, 2) # '2' is number of significant digits
   StormData$LATITUDE <- lat * (numsign * numsign) # LATs belong to northern hemisphere 
 
 #   user  system elapsed 
@@ -214,7 +203,7 @@ rm(d1, d2)
 # reformat LONGITUDE vector to geographic coordinate system format nnn.ddd
   numsign <- sign(StormData$LONGITUDE)
   lon <- sapply(StormData$LONGITUDE, udf.stripsign)
-  lon <- sapply(lon, udf.num2gcs, 3) # param '3' is number of significant digits
+  lon <- sapply(lon, udf.num2gcs, 3) # '3' is number of significant digits
   StormData$LONGITUDE <- lon * (numsign * -numsign) # LONs belong to western hemisphere
   
 rm(lon, lat, numsign)  
@@ -231,7 +220,6 @@ repeat {
 StormData$STATE <- toupper(trimws(StormData$STATE))
 StormData$PROPDMGEXP <- toupper(trimws(StormData$PROPDMGEXP))
 StormData$CROPDMGEXP <- toupper(trimws(StormData$CROPDMGEXP))
-
 
 # weather events classes  https://www.weather.gov/iwx/events
 
@@ -277,9 +265,9 @@ ev.class[5,3] <- "FLOOD|WET|RAIN|SHOWER|HEAVY|PRECIPITAT"
 ev.class[6,1] <- "F"
 ev.class[6,2] <- "HAIL"
 ev.class[6,3] <- "HAIL"
-ev.class[7,1] <- "G"
-ev.class[7,2] <- "CLOUD"
-ev.class[7,3] <- "CLOUD|FUNNEL|WALL"
+# ev.class[7,1] <- "G"
+# ev.class[7,2] <- "CLOUD"
+# ev.class[7,3] <- "CLOUD|FUNNEL|WALL"
 ev.class[8,1] <- "H"
 ev.class[8,2] <- "WILD.FIRE"
 ev.class[8,3] <- "FIRE"
@@ -329,7 +317,9 @@ stormsub <- StormData %>%
                REFNUM) %>%
         filter(STATE %in% mystates & !(EVCLASS %in% c("X","Z"))) %>% 
         mutate(STATE = factor(STATE),
-               EVCLASS = factor(EVCLASS, labels = ev.class[P,2])) %>%
+               EVCLASS = factor(EVCLASS, labels = ev.class[P,2]),
+               PROPDMGS = mapply(udf.expont, PROPDMGEXP, PROPDMG),
+               CROPDMGS = mapply(udf.expont, CROPDMGEXP, CROPDMG)) %>%
         arrange(EV_TIMESTAMP)
                 # (!is.na(LONGITUDE) & !is.na(LATITUDE)) &
                 #        (LONGITUDE != 0 & LATITUDE != 0)) %>%
@@ -349,9 +339,9 @@ nf <- layout(matrix(c(1,2,
                       3,3,
                       4,4), nrow = 3, byrow = TRUE))
 
-# weather events aggregate frequency by class across the USA.
+# weather events aggregate frequency by type across the USA.
 evcnt1 <- stormsub %>%
-        select(STATE,EVCLASS,EVTYPE,FATALITIES,INJURIES,PROPDMG,CROPDMG) %>%
+        select(STATE,EVCLASS,EVTYPE,EV_TIMESTAMP) %>%
         group_by(EVCLASS) %>%
         summarise(EVCNT = n())
 
@@ -359,7 +349,7 @@ evcnt1 <- stormsub %>%
 par(mai = c(0.25,1.10,0.25,0.10))
 barplot(evcnt1$EVCNT, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt1$EVCLASS))
 mtext("Weather Event Frequency Aggregate Across USA (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 1, cex = 0.75)
-mtext("(US Affiliated Territories Not Included)", side = 3, line = -1.00, adj = 1, cex = 0.65)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -0.75, adj = 1, cex = 0.65)
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt1$EVCNT, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
@@ -369,8 +359,8 @@ for (i in 1:length(m)) {
 
 # barchart plot for weather events manifested in casualty and property/crop loss by type across the USA.
 evcnt2 <- stormsub %>%
-        select(STATE,EVCLASS,EVTYPE,FATALITIES,INJURIES,PROPDMG,CROPDMG) %>%
-        filter(FATALITIES > 0 | INJURIES > 0 | PROPDMG > 0 | CROPDMG > 0) %>%
+        select(STATE,EVCLASS,EVTYPE,FATALITIES,INJURIES,PROPDMG,CROPDMG,EV_TIMESTAMP) %>%
+        filter(FATALITIES > 0 | INJURIES > 0 | PROPDMGS > 0 | CROPDMGS > 0) %>%
         group_by(EVCLASS) %>%
         summarise(EVCNT = n())
 
@@ -378,8 +368,8 @@ evcnt2 <- stormsub %>%
 par(mai = c(0.25,0.10,0.25,1.10), yaxt = "n")
 barplot(evcnt2$EVCNT, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt2$EVCLASS))
 mtext("Weather Event Frequency Aggregate Across USA (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 1, cex = 0.75)
-mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -1.00, adj = 1, cex = 0.75)
-mtext("(US Affiliated Territories Not Included)", side = 3, line = -2.25, adj = 1, cex = 0.65)
+mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -0.75, adj = 1, cex = 0.75)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -1.75, adj = 1, cex = 0.65)
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt2$EVCNT, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
@@ -390,19 +380,14 @@ for (i in 1:length(m)) {
 # hazardous weather events in terms of casualty count and economic loss
 # casualty & property/crop loss breakdown by event type of individual-state
 evcnt3 <- stormsub %>%
-        select(STATE, EVCLASS, EVTYPE, FATALITIES, INJURIES,
-               PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP) %>%
+        select(STATE, EVCLASS, EVTYPE, FATALITIES,INJURIES, PROPDMGS,CROPDMGS) %>%
         group_by(STATE, EVCLASS) %>%
-        summarise(FATALCNT = sum(FATALITIES),
-                  INJURCNT = sum(INJURIES),
-                  PROPDMGS = sum(mapply(udf.expont, PROPDMGEXP, PROPDMG)),
-                  CROPDMGS = sum(mapply(udf.expont, CROPDMGEXP, CROPDMG)),
-                  ECONLOSS = (PROPDMGS + CROPDMGS) / 1e+09,
-                  CASULTIE = (FATALCNT + INJURCNT) / 1e+03)
+        summarise(ECONLOSS = (sum(PROPDMGS) + sum(CROPDMGS)) / 1e+09,
+                  CASULTIE = (sum(FATALITIES) + sum(INJURIES)) / 1e+03)
 
 par(mai = c(0.25, 1.10, 0.25, 1.10), cex.axis = 0.75, ann = FALSE, yaxt = "s")
 
-barplot(CASULTIE ~ EVCLASS + as.character(STATE), data = evcnt3,
+barplot(CASULTIE ~ EVCLASS + STATE, data = evcnt3,
         border = NA,
         col = pal)
 title(ylab = "Casualty Count ( '000 )", cex.lab = 0.90)
@@ -415,14 +400,46 @@ title(ylab = "Property/Crop Loss ( $Bn )", cex.lab = 0.90)
 mtext("Property/Crop Loss by Event Type of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = -0.75, adj = 1, padj = 0, cex = 0.75)
 ```
 
-```{r data.analytic2.notused}
+```{r data.analytic2, cache=TRUE}
+evcnt4 <- stormsub %>% 
+        select(EV_TIMESTAMP, EVCLASS, FATALITIES,INJURIES, PROPDMGS,CROPDMGS) %>%
+        arrange(EV_TIMESTAMP) %>%
+        group_by(YEARS = year(EV_TIMESTAMP), EVCLASS) %>%
+        summarise(EVCNT = n(),
+                  CASUALTI = sum(FATALITIES + INJURIES),
+                  ECONLOSS = mean(PROPDMGS + CROPDMGS))
+
+xyp <- xyplot(EVCNT ~ YEARS | EVCLASS, data = evcnt4,
+              layout = c(2,5),
+              groups = EVCLASS,
+              pch = 19,
+              col = pal,
+              strip = FALSE,
+              strip.left = TRUE,
+              par.strip.text = list(cex = 0.6),
+              scales = list(cex = 0.6, y = list(log = "e")),
+              xlab = list(label = "Years of Observation", cex = 0.8),
+              ylab = list(label = "Frequency of Weather Event (log)", cex = 0.8))
+
+xyp <- update(xyp, panel = function(x, y, ...) {
+        panel.xyplot(x, y, ...)
+        panel.lmline(x, y, col = rgb(0,0,1, alpha = 0.5), lwd = 2)
+
+        })
+
+print(xyp)
+
+```
+
+
+```{r data.analytic.notused}
 par(par.def)
 par(las = 1, cex.axis = 0.50, cex.lab = 0.80, ann = FALSE)
 nf <- layout(matrix(c(1,2), nrow = 2, byrow = TRUE))
 
 # weather events aggregate frequency of individual state.
 evcnt <- stormsub %>%
-        select(STATE,EVCLASS,EVTYPE,FATALITIES,INJURIES,PROPDMG,CROPDMG) %>%
+        select(STATE,EVCLASS,EVTYPE) %>%
         group_by(STATE, EVCLASS) %>%
         summarise(EVCNT = n()/1e+03)
 
@@ -436,7 +453,7 @@ title(ylab = "Event Frequency by Type ('000)")
 mtext("Weather Events Frequency Aggregate of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 0, padj = 0, cex = 0.80)
 
 # aggregate weather events of individual state manifested in casualty and economic loss.
-evcnt <- stormsub %>%
+evcnt0 <- stormsub %>%
         select(STATE,EVCLASS,EVTYPE,FATALITIES,INJURIES,PROPDMG,CROPDMG) %>%
         filter(FATALITIES > 0 | INJURIES > 0 | PROPDMG > 0 | CROPDMG > 0) %>%
         group_by(STATE, EVCLASS) %>%
@@ -444,13 +461,63 @@ evcnt <- stormsub %>%
 
 # plotting barchart for weather-events that triggered the occurrences of fatalities/injuries and properties/crops damages for each state.
 par(mai = c(0.55, 1.10, 0.55, 1.10))
-barplot(EVCNT ~ EVCLASS + as.character(STATE), data = evcnt, 
+barplot(EVCNT ~ EVCLASS + as.character(STATE), data = evcnt0, 
         horiz = FALSE, 
         border = NA,
         col = pal)
 title(ylab = "Event Frequency by Type ('000)")
-mtext("Weather Events Frequency Aggregate of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 0, padj = 0, cex = 0.80)
-mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -0.75, adj = 0, padj = 0, cex = 0.80)
+mtext("Weather Events Frequency Aggregate of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 0, padj = 0, cex = 0.75)
+mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -0.75, adj = 0, padj = 0, cex = 0.75)
+
+
+# nf <- layout(matrix(c(1,2,
+#                       1,3), nrow = 2, byrow = TRUE))
+# par(mai = c(0.41,0.82,0.41,0.42))
+# plot(EVCNT ~ YEARS, data = evcnt4, 
+#      pch = 19,
+#      col = pal,
+#      log = "y"
+#      )
+# for (i in 1:N) {
+#         abline(lm(EVCNT ~ YEARS, evcnt4, subset = EVCLASS), col = pal[i])
+# }
+# plot(CASUALTI ~ YEARS, data = evcnt4, 
+#      pch = 19,
+#      col = pal,
+#      log = "y"
+#      )
+# for (i in 1:N) {
+#         abline(lm(CASUALTI ~ YEARS, evcnt4, as.numeric(EVCLASS) == i), col = pal[i])
+# }
+# plot(ECONLOSS ~ YEARS, data = evcnt4, 
+#      pch = 19,
+#      col = pal,
+#      log = "y"
+#      )
+# for (i in 1:N) {
+#         abline(lm(ECONLOSS ~ YEARS, evcnt4, as.numeric(EVCLASS) == i), col = pal[i])
+# }
+# par(par.def)
+
+
+# # save an archive copy of StormData data.table to local `r datadir`
+# for (i in 1:length(filenam)) {
+#         fileout <- paste(datadir, filenam[i], sep = "/")
+#         fileout <- paste(fileout, "csv", "bz2", sep = ".")
+#         filesrc <- bzfile(fileout, open = "w")
+#         write.csv(get(filenam[i]), filesrc, row.names = FALSE)
+#         flush(filesrc)
+# }
+# close(filesrc)
+# rm(fileout)
+# 
+# read StormData from saved archive copy data file on local disk
+# filesrc <- paste(datadir, "StormData.csv.bz2", sep = "/")
+# filesrc <- bzfile(filesrc, open = "r") # establish a connection to local file
+# StormData <- data.table(read.csv(filesrc, skip = 0))
+# flush(filesrc)
+# close(filesrc)
+
 ```
 
 
