--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -468,8 +468,8 @@ nf <- layout(matrix(c(1,1,1,1,2,2,
                       1,1,1,1,2,2,
                       1,1,1,1,2,2,
                       1,1,1,1,3,3,
-                      4,4,5,5,3,3,
-                      4,4,5,5,3,3), nrow = 7, byrow = TRUE))
+                      5,5,4,4,3,3,
+                      5,5,4,4,3,3), nrow = 7, byrow = TRUE))
 
 # Map of USA mainland
 lon <- c(-130.00, -66.00)
@@ -477,7 +477,7 @@ lat <- c(25.00, 50.00)
 # mymap0 <- map("world", regions = ".*usa", xlim = lon ,ylim = lat, interior = TRUE, plot = FALSE)
 # plot(mymap0, type = "l", lwd = 0.5, cex.axis = 0.8, main = "USA mainland")
 mymap0 <- map("state", interior = TRUE, plot = FALSE)
-par(mai = c(0.21, 0.32, 0.21, 0.32))
+par(mai = c(0.25, 0.32, 0.25, 0.25))
 plot(mymap0, type = "l", lwd = 0.5, ann = FALSE)
 title(main = "USA mainland")
 # coordinates of weather events for USA mainland
@@ -487,14 +487,14 @@ ev.w.gcs <- subset(stormsub, as.numeric(rownames(stormsub)) %in% w &
                    c(LONGITUDE, LATITUDE))
 points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 0.6, 
        col = alpha(pal[ev.klass], 0.3))
-legend(x = -75, y = 27, ev.class[ev.klass,2], fill = pal[ev.klass], border = pal[ev.klass], bty = "n", x.intersp = 0.5, y.intersp = 1.2, cex = 0.8)
+legend(x = -75, y = 27, ev.class[ev.klass,2], fill = pal[ev.klass], border = pal[ev.klass], bty = "n", x.intersp = 1/2, y.intersp = 1, cex = 0.8)
 
 
 # Map of Alaska
 lon <- c(-180.00, -129.00)
 lat <- c(50.33, 72.83)
 mymap0 <- map("world", regions = ".*usa", xlim = lon ,ylim = lat, plot = FALSE)
-par(mai = c(0.21, 0.32, 0.21, 0.32))
+par(mai = c(0.25, 0.32, 0.25, 0.25))
 plot(mymap0, type = "l", lwd = 0.5, ann = FALSE)
 title(main = "Alaska")
 # coordinates of events for Alaska
@@ -503,14 +503,14 @@ ev.w.gcs <- subset(stormsub, as.numeric(rownames(stormsub)) %in% w &
                                     (LATITUDE > lat[1] & LATITUDE < lat[2])),
                    c(LONGITUDE, LATITUDE)
                    )
-points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 1.0, 
+points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 2.0, 
        col = alpha(pal[ev.klass], 0.5))
 
 # Map of Hawaii
 lon <- c(-177.37, -153.48)
 lat <- c(17.92, 29.45)
 mymap0 <- map("world", regions = ".*usa", xlim = lon ,ylim = lat, plot = FALSE)
-par(mai = c(0.21, 0.32, 0.21, 0.32))
+par(mai = c(0.25, 0.32, 0.25, 0.25))
 plot(mymap0, type = "l", lwd = 0.5, ann = FALSE)
 title(main = "Hawaii")
 # coordinates of events 
@@ -519,9 +519,31 @@ ev.w.gcs <- subset(stormsub, as.numeric(rownames(stormsub)) %in% w &
                                     (LATITUDE > lat[1] & LATITUDE < lat[2])),
                    c(LONGITUDE, LATITUDE)
                    )
-points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 0.8, 
+points(x = ev.w.gcs$LONGITUDE, y = ev.w.gcs$LATITUDE, pch = 20, cex = 1.2, 
        col = alpha(pal[ev.klass], 0.5))
 
+
+par(mai = c(0.25, 0.82, 0.25, 0.25), ann = FALSE)
+
+plot(log(CASUALTI.sum) ~ YEARS, 
+     data = subset(evcnt4, as.numeric(EVCLASS) %in% ev.klass),
+     pch = 19, col = pal[ev.klass], cex = 0.8)
+title(ylab = "Number of Casualty (log scale)")
+# for (i in 1:length(ev.klass)) {
+#         abline(lm(CASUALTI.sum ~ YEARS,
+#                   data = subset(evcnt4, as.numeric(EVCLASS) == ev.klass[i])),
+#                   col = alpha(pal[i], 0.7), lwd = 2)
+# }
+
+plot(log(ECONLOSS.sum) ~ YEARS, 
+     data = subset(evcnt4, as.numeric(EVCLASS) %in% ev.klass),
+     pch = 19, col = pal[ev.klass], cex = 0.8)
+title(ylab = "Property/Crop Loss (log scale)")
+# for (i in 1:length(ev.klass)) {
+#         abline(lm(ECONLOSS.sum ~ YEARS,
+#                   data = subset(evcnt4, as.numeric(EVCLASS) == ev.klass[i])),
+#                   col = alpha(pal[i], 0.7), lwd = 2)
+# }
 
 par(par.def)
 
